--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             </div>
             );
 
+     const [scrolledToBottom, setScrolledToBottom] = useState({});
+
+
     const JuniorLeagueApp=()=>{
       const [activeTab,setActiveTab]=useState('stats');
             const [currentPeriod,setCurrentPeriod]=useState(1);
