--- a/index.html
+++ b/index.html
@@ -2099,7 +2099,7 @@ const renderPlayerTable=(team)=>{
         </div>
       )}
     </div>
-
+</div>
     
     {!isViewer&&!matchEnded&&(
       <div className="p-3 border-t">
