--- a/index.html
+++ b/index.html
@@ -1928,6 +1928,47 @@ const generateCSV=()=>{
       };
 
       const refSigs = [
+
+   { 
+    name: 'Checking from behind', 
+    description: '...',
+    image: 'images/ref_checking_from_behind.png'  
+  },
+  { 
+    name: 'Crosschecking', 
+    description: '...',
+    image: 'images/ref_crosschecking.png'  
+  },
+  { 
+    name: 'Delayed Penalty', 
+    description: '...',
+    image: 'images/ref_delayed_penalty.png'  
+  },
+  { 
+    name: 'Timeout', 
+    description: '...',
+    image: 'images/ref_time_out.png'  
+  },
+  { 
+    name: 'Icing', 
+    description: '...',
+    image: 'images/ref_icing.png'  
+  },
+  { 
+    name: 'Interference', 
+    description: '...',
+    image: 'images/ref_interference.png'  
+  },
+  { 
+    name: 'Kneeing', 
+    description: '...',
+    image: 'images/ref_kneeing.png'  
+  },
+  { 
+    name: 'Roughing', 
+    description: '...',
+    image: 'images/ref_roughing.png'  
+  },        
   { 
     name: 'Elbowing', 
     description: 'Tapping either elbow with the opposite hand',
@@ -4058,3 +4099,4 @@ return(
   </script>
 </body>
 </html>
+
