--- a/index.html
+++ b/index.html
@@ -1949,6 +1949,11 @@ const generateCSV=()=>{
     image: 'images/ref_elbowing.png'  
   }, 
   { 
+    name: 'Checking to the head', 
+    description: 'Hand with open palm on the side of the head',
+    image: 'images/ref_checking_to_the_head.png'  
+  }, 
+  { 
     name: 'Kneeing', 
     description: 'Slapping either knee with the palm of the hand',
     image: 'images/ref_kneeing.png'  
@@ -1967,6 +1972,11 @@ const generateCSV=()=>{
     name: 'Penalty Shot', 
     description: 'Arms crossed above head',
     image: 'images/ref_penalty_shot.png'  
+  },
+  { 
+    name: 'Goalt', 
+    description: 'Outstretched hand directed at the goal',
+    image: 'images/ref_goal.png'  
   },
   { 
     name: 'Delayed Penalty', 
@@ -4098,5 +4108,6 @@ return(
   </script>
 </body>
 </html>
+
 
 
