--- a/index.html
+++ b/index.html
@@ -1953,6 +1953,17 @@ const generateCSV=()=>{
     description: 'Hand with open palm on the side of the head',
     image: 'images/ref_checking_to_the_head.png'  
   }, 
+
+  { 
+    name: 'Boarding', 
+    description: 'Hitting fist in the other open hand in front of the chest',
+    image: 'images/ref_boarding.png'  
+  }, 
+  { 
+    name: 'Holding', 
+    description: 'Clasping either wrist with the other hand in front of the chest',
+    image: 'images/ref_holding.png'  
+  },     
   { 
     name: 'Kneeing', 
     description: 'Slapping either knee with the palm of the hand',
@@ -1974,7 +1985,7 @@ const generateCSV=()=>{
     image: 'images/ref_penalty_shot.png'  
   },
   { 
-    name: 'Goalt', 
+    name: 'Goal', 
     description: 'Outstretched hand directed at the goal',
     image: 'images/ref_goal.png'  
   },
@@ -4108,6 +4119,7 @@ return(
   </script>
 </body>
 </html>
+
 
 
 
