Additional ref signals

--- a/index.html
+++ b/index.html
@@ -1953,7 +1953,11 @@ const generateCSV=()=>{
     description: 'Hand with open palm on the side of the head',
     image: 'images/ref_checking_to_the_head.png'  
   }, 
-
+  { 
+    name: 'Charging', 
+    description: 'Rotating clenched fists around one another in front of the chest',
+    image: 'images/ref_charging.png'  
+  }, 
   { 
     name: 'Boarding', 
     description: 'Hitting fist in the other open hand in front of the chest',
@@ -1963,7 +1967,12 @@ const generateCSV=()=>{
     name: 'Holding', 
     description: 'Clasping either wrist with the other hand in front of the chest',
     image: 'images/ref_holding.png'  
-  },     
+  },   
+      { 
+    name: 'High-sticking', 
+    description: 'Holding both fists clenched, one slightly above the other as if holding a stick',
+    image: 'images/ref_high_sticking.png'  
+  },   
   { 
     name: 'Kneeing', 
     description: 'Slapping either knee with the palm of the hand',
@@ -1988,6 +1997,11 @@ const generateCSV=()=>{
     name: 'Goal', 
     description: 'Outstretched hand directed at the goal',
     image: 'images/ref_goal.png'  
+  },
+  { 
+    name: 'Wash out', 
+    description: 'Both arms outwards in an outstreched position at sholder level, indicating no goal, no icing or no off-side',
+    image: 'images/ref_wash_out.png'  
   },
   { 
     name: 'Delayed Penalty', 
@@ -4119,6 +4133,7 @@ return(
   </script>
 </body>
 </html>
+
 
 
 
