--- a/index.html
+++ b/index.html
@@ -1470,13 +1470,13 @@ const AdminPanel = ({darkMode, setScreen}) => {
 
   return (
     <div className={`min-h-screen ${darkMode ? 'bg-gray-900' : 'bg-gray-100'}`}>
-      <div className={`${darkMode ? 'bg-gray-800' : 'bg-blue-600'} text-white p-4 sticky top-0 z-10`}>
+      <div className={`${darkMode ? 'bg-gray-800' : 'bg-blue-600'} text-white p-4`}>
         <div className="max-w-6xl mx-auto flex justify-between items-center">
           <h2 className="font-bold text-lg">Admin – Games</h2>
           <div className="flex gap-2">
             <button
               onClick={() => setScreen('start')}
-              className="bg-white bg-opacity-20 px-3 py-2 rounded"
+              className="bg-white bg-opacity-20 px-3 py-2 rounded hover:bg-opacity-30"
             >
               <IconBack />
             </button>
@@ -1489,7 +1489,7 @@ const AdminPanel = ({darkMode, setScreen}) => {
           <table className="w-full text-sm">
             <thead className={`${darkMode ? 'bg-gray-800 text-gray-200' : 'bg-gray-200'}`}>
               <tr>
-                <th className="px-3 py-3 text-left">Match ID</th>
+                <th className={`px-3 py-3 text-left sticky left-0 z-10 ${darkMode ? 'bg-gray-800' : 'bg-gray-200'}`}>Match ID</th>
                 <th className="px-3 py-3 text-left">Owner Email</th>
                 <th className="px-3 py-3 text-left">Home</th>
                 <th className="px-3 py-3 text-left">Away</th>
@@ -1498,11 +1498,11 @@ const AdminPanel = ({darkMode, setScreen}) => {
                   onClick={() =>
                     setSortDir(d => (d === 'asc' ? 'desc' : 'asc'))
                   }
-                  className="px-3 py-3 text-center cursor-pointer select-none"
+                  className="px-3 py-3 text-center cursor-pointer select-none hover:bg-opacity-80"
                 >
                   Created {sortDir === 'asc' ? <IconChevronDown /> : <IconChevronUp />}
                 </th>
-                <th className="px-3 py-3 whitespace-nowrap min-w-[120px]">Actions</th>
+                <th className="px-3 py-3 whitespace-nowrap min-w-[140px]">Actions</th>
               </tr>
             </thead>
             <tbody>
@@ -1525,7 +1525,7 @@ const AdminPanel = ({darkMode, setScreen}) => {
                     key={id}
                     className={`border-t ${darkMode ? 'border-gray-700 text-gray-200' : 'border-gray-300'}`}
                   >
-                    <td className={`px-3 py-2 font-mono ${darkMode ? 'text-gray-200' : ''}`}>{id}</td>
+                    <td className={`px-3 py-2 font-mono sticky left-0 z-10 ${darkMode ? 'bg-gray-900 text-gray-200' : 'bg-gray-100'}`}>{id}</td>
                     <td className={`px-3 py-2 ${darkMode ? 'text-gray-200' : ''}`}>{m.ownerEmail || '—'}</td>
                     <td className={`px-3 py-2 ${darkMode ? 'text-gray-200' : ''}`}>{m.homeName || '—'}</td>
                     <td className={`px-3 py-2 ${darkMode ? 'text-gray-200' : ''}`}>{m.awayName || '—'}</td>
@@ -1540,15 +1540,27 @@ const AdminPanel = ({darkMode, setScreen}) => {
                     <td className="px-3 py-2 text-center space-x-2 whitespace-nowrap">
                       <button
                         onClick={() => toggleEnded(id, m.ended)}
-                        className="px-2 py-1 rounded bg-yellow-500 text-white"
+                        className="px-3 py-1.5 rounded bg-yellow-500 hover:bg-yellow-600 text-white inline-flex items-center"
+                        title={m.ended ? 'Resume game' : 'End game'}
                       >
-                        {m.ended ? '▶' : '⏹'}
+                        {m.ended ? (
+                          <svg className="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M6.3 2.841A1.5 1.5 0 004 4.11V15.89a1.5 1.5 0 002.3 1.269l9.344-5.89a1.5 1.5 0 000-2.538L6.3 2.84z"/>
+                          </svg>
+                        ) : (
+                          <svg className="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
+                            <path fillRule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8 7a1 1 0 00-1 1v4a1 1 0 001 1h4a1 1 0 001-1V8a1 1 0 00-1-1H8z" clipRule="evenodd"/>
+                          </svg>
+                        )}
                       </button>
                       <button
                         onClick={() => deleteMatch(id)}
-                        className="px-2 py-1 rounded bg-red-600 text-white"
+                        className="px-3 py-1.5 rounded bg-red-600 hover:bg-red-700 text-white inline-flex items-center"
+                        title="Delete game"
                       >
-                        🗑
+                        <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                          <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"/>
+                        </svg>
                       </button>
                     </td>
                   </tr>
@@ -1560,6 +1572,7 @@ const AdminPanel = ({darkMode, setScreen}) => {
     </div>
   );
 };
+
 
 
 const updateStat=(team,stat,delta)=>{
