--- a/index.html
+++ b/index.html
@@ -3942,17 +3942,17 @@ return(
                                     <div className="overflow-x-auto">
                                       <table className="w-full text-xs">
                                         <thead>
-                                          <tr className={`${darkMode?'text-gray-400':'text-gray-600'}`}>
-  <th className="text-left">#</th>
-  <th className="text-center">G</th>
-  <th className="text-center">A</th>
-  <th className="text-center">+/-</th>
-  <th className="text-center">FO</th>
-  <th className="text-center">FO%</th>
-  <th className="text-center">SOG</th>
-  <th className="text-center">PIM</th>
-</tr>
-                                        </thead>
+  <tr className={`${darkMode?'text-gray-400':'text-gray-600'} text-sm`}>
+    <th className="text-left px-2 py-2 font-semibold">#</th>
+    <th className="text-center px-2 py-2 font-semibold">G</th>
+    <th className="text-center px-2 py-2 font-semibold">A</th>
+    <th className="text-center px-2 py-2 font-semibold">+/-</th>
+    <th className="text-center px-2 py-2 font-semibold">FO</th>
+    <th className="text-center px-2 py-2 font-semibold">FO%</th>
+    <th className="text-center px-2 py-2 font-semibold">SOG</th>
+    <th className="text-center px-2 py-2 font-semibold">PIM</th>
+  </tr>
+</thead>
                                         <tbody>
                                           {playerNums.map(pNum=>{
                                             const pStats=players[pNum].periods[p];
@@ -3964,15 +3964,15 @@ return(
                                             const foTotal=foPlus+foMinus;
                                             const foPct=foTotal===0?'-':((foPlus/foTotal)*100).toFixed(0);
                                             return(
-                                              <tr key={pNum} className={`border-t ${darkMode?'border-gray-600':'border-gray-200'}`}>
-  <td className="font-bold py-1">{pNum}</td>
-  <td className="text-center">{pStats?.['G']||0}</td>
-  <td className="text-center">{pStats?.['A']||0}</td>
-  <td className="text-center font-semibold">{plusMinus>=0?'+':''}{plusMinus}</td>
-  <td className="text-center">{foTotal}</td>
-  <td className="text-center font-semibold">{foPct}{foPct!=='-'?'%':''}</td>
-  <td className="text-center">{pStats?.['SOG']||0}</td>
-  <td className="text-center">{pStats?.['PIM']||0}</td>
+                                              <tr key={pNum} className={`border-t ${darkMode?'border-gray-600':'border-gray-200'} text-sm`}>
+  <td className="font-bold px-2 py-2">{pNum}</td>
+  <td className="text-center px-2 py-2">{pStats?.['G']||0}</td>
+  <td className="text-center px-2 py-2">{pStats?.['A']||0}</td>
+  <td className="text-center px-2 py-2 font-semibold">{plusMinus>=0?'+':''}{plusMinus}</td>
+  <td className="text-center px-2 py-2">{foTotal}</td>
+  <td className="text-center px-2 py-2 font-semibold">{foPct}{foPct!=='-'?'%':''}</td>
+  <td className="text-center px-2 py-2">{pStats?.['SOG']||0}</td>
+  <td className="text-center px-2 py-2">{pStats?.['PIM']||0}</td>
 </tr>
                                             );
                                           })}
@@ -4052,17 +4052,17 @@ return(
                                 <div className="overflow-x-auto">
                                   <table className="w-full text-xs">
                                     <thead>
-                                      <tr className={`${darkMode?'text-gray-400':'text-gray-600'}`}>
-  <th className="text-left">#</th>
-  <th className="text-center">G</th>
-  <th className="text-center">A</th>
-  <th className="text-center">+/-</th>
-  <th className="text-center">FO</th>
-  <th className="text-center">FO%</th>
-  <th className="text-center">SOG</th>
-  <th className="text-center">PIM</th>
-</tr>
-                                    </thead>
+  <tr className={`${darkMode?'text-gray-400':'text-gray-600'} text-sm`}>
+    <th className="text-left px-2 py-2 font-semibold">#</th>
+    <th className="text-center px-2 py-2 font-semibold">G</th>
+    <th className="text-center px-2 py-2 font-semibold">A</th>
+    <th className="text-center px-2 py-2 font-semibold">+/-</th>
+    <th className="text-center px-2 py-2 font-semibold">FO</th>
+    <th className="text-center px-2 py-2 font-semibold">FO%</th>
+    <th className="text-center px-2 py-2 font-semibold">SOG</th>
+    <th className="text-center px-2 py-2 font-semibold">PIM</th>
+  </tr>
+</thead>
                                     <tbody>
                                       {playerNums.map(pNum=>{
                                         const pStats=players[pNum].total;
@@ -4074,15 +4074,15 @@ return(
                                         const foTotal=foPlus+foMinus;
                                         const foPct=foTotal===0?'-':((foPlus/foTotal)*100).toFixed(0);
                                         return(
-                                          <tr key={pNum} className={`border-t ${darkMode?'border-gray-600':'border-gray-200'}`}>
-  <td className="font-bold py-1">{pNum}</td>
-  <td className="text-center">{pStats?.['G']||0}</td>
-  <td className="text-center">{pStats?.['A']||0}</td>
-  <td className="text-center font-semibold">{plusMinus>=0?'+':''}{plusMinus}</td>
-  <td className="text-center">{foTotal}</td>
-  <td className="text-center font-semibold">{foPct}{foPct!=='-'?'%':''}</td>
-  <td className="text-center">{pStats?.['SOG']||0}</td>
-  <td className="text-center">{pStats?.['PIM']||0}</td>
+                                          <tr key={pNum} className={`border-t ${darkMode?'border-gray-600':'border-gray-200'} text-sm`}>
+  <td className="font-bold px-2 py-2">{pNum}</td>
+  <td className="text-center px-2 py-2">{pStats?.['G']||0}</td>
+  <td className="text-center px-2 py-2">{pStats?.['A']||0}</td>
+  <td className="text-center px-2 py-2 font-semibold">{plusMinus>=0?'+':''}{plusMinus}</td>
+  <td className="text-center px-2 py-2">{foTotal}</td>
+  <td className="text-center px-2 py-2 font-semibold">{foPct}{foPct!=='-'?'%':''}</td>
+  <td className="text-center px-2 py-2">{pStats?.['SOG']||0}</td>
+  <td className="text-center px-2 py-2">{pStats?.['PIM']||0}</td>
 </tr>
                                         );
                                       })}
