--- a/index.html
+++ b/index.html
@@ -2257,7 +2257,7 @@ return(
   </select>
 </label>
 
-                 <label className="flex items-center gap-2 cursor-pointer">
+                 <label className="flex items-center gap-2 cursor-pointer ml-3">
                     <input
                       type="checkbox"
                       checked={playerStatsEditMode}
@@ -4192,3 +4192,4 @@ return(
   </script>
 </body>
 </html>
+
